# GPU-T2

./: .gitmodules  CMakeLists.txt  README.md  cpu_results.csv  cpu_tests.py  cuda_local_results.csv  cuda_results.csv  cuda_tests.py  cuda_tests_local.py  imgui.ini  opencl_local_results.csv  opencl_results.csv  opencl_tests.py  opencl_tests_local.py  workgroups_cuda.csv  workgroups_opencl.csv
include/: gameOfLife.hpp
include/gameOfLife/: cpu.hpp  cuda.hpp  interface.hpp  opencl.hpp
include/glad/: glad.h
src/: cpu.cpp  cuda.cpp  cuda.cu  gameOfLife.cpp  glad.c  main.cpp  opencl.cpp  test.cpp
